// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MoreDirectChannels should exclude deleted users if there is not direct channel between users 1`] = `
<Modal
  animation={true}
  aria-labelledby="moreDmModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal more-direct-channels"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="moreDmModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="moreDmModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="Direct Messages"
        id="more_direct_channels.title"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <Connect(Component)
      addValue={[Function]}
      currentUserId="current_user_id"
      handleDelete={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      isExistingChannel={false}
      loading={true}
      saving={false}
      search={[Function]}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      totalCount={3}
      users={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_1",
            "label": "deleted_user_id_1",
            "value": "deleted_user_id_1",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_2",
            "label": "deleted_user_id_2",
            "value": "deleted_user_id_2",
          },
          Object {
            "delete_at": 1,
            "id": "deleted_user_3",
            "label": "deleted_user_id_3",
            "value": "deleted_user_id_3",
          },
        ]
      }
      values={Array []}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    className="modal-footer--invisible"
    componentClass="div"
  >
    <button
      className="btn btn-link"
      id="closeModalButton"
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Close"
        id="general_button.close"
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/MoreDirectChannels should match snapshot 1`] = `
<Modal
  animation={true}
  aria-labelledby="moreDmModalLabel"
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="a11y__modal more-modal more-direct-channels"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  id="moreDmModal"
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onEntered={[Function]}
  onExited={[Function]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h1"
      id="moreDmModalLabel"
    >
      <MemoizedFormattedMessage
        defaultMessage="Direct Messages"
        id="more_direct_channels.title"
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
    role="application"
  >
    <Connect(Component)
      addValue={[Function]}
      currentUserId="current_user_id"
      handleDelete={[Function]}
      handlePageChange={[Function]}
      handleSubmit={[Function]}
      isExistingChannel={false}
      loading={true}
      saving={false}
      search={[Function]}
      selectedItemRef={
        Object {
          "current": null,
        }
      }
      totalCount={3}
      users={
        Array [
          Object {
            "delete_at": 0,
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
          Object {
            "delete_at": 0,
            "id": "user_id_3",
            "label": "user_id_3",
            "value": "user_id_3",
          },
        ]
      }
      values={
        Array [
          Object {
            "id": "user_id_1",
            "label": "user_id_1",
            "value": "user_id_1",
          },
          Object {
            "id": "user_id_2",
            "label": "user_id_2",
            "value": "user_id_2",
          },
        ]
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    className="modal-footer--invisible"
    componentClass="div"
  >
    <button
      className="btn btn-link"
      id="closeModalButton"
      type="button"
    >
      <MemoizedFormattedMessage
        defaultMessage="Close"
        id="general_button.close"
      />
    </button>
  </ModalFooter>
</Modal>
`;
